fixed icons theme switcher fixed blog-post spacing

--- a/src/components/ThemeSwitcher.css
+++ b/src/components/ThemeSwitcher.css
@@ -3,11 +3,12 @@
 }
 
 .react-toggle-track-check {
-  padding-top: 5px;
+  padding-bottom: 16px;
+  margin-left: 0px;
 }
 
 .react-toggle-track-x {
-  padding-top: 5px;
+  padding-bottom: 17px;
   margin-right: 5px;
 }
 
